# halo2

./: .gitignore  404.html  CHANGELOG.md  COPYING  Cargo.nix  Cargo.toml  Contributor_Agreement  IDENTIFIERS.json  LICENSE-APACHE  LICENSE-BOSL  LICENSE-MIT  LICENSE-MIT-upstream  LICENSE-TGPPL  README.md  background.html  codecov.yml  concepts.html  design.html  dev.html  flake.nix  index.html  print.html  rust-toolchain  scratch  searcher-c2a407aa.js  searchindex-7fe67300.js  searchindex.js  searchindex.json  test.sh  toc-1f9ef8f0.js  toc.html  user.html
halo2/: CHANGELOG.md  COPYING  Cargo.toml
halo2/src/: accumulation.rs  accumulator.rs  lib.rs  prover.rs  recursion.rs  recursive_verifier.rs  transcript.rs
halo2/src/accumulation/: bivariate.rs  private.rs
halo2/src/accumulator/: verifier.rs
halo2/src/recursion/: endoscale.rs
halo2/src/recursion/endoscale/: chip.rs  primitive.rs
halo2/src/recursive_verifier/: transcript.rs
halo2_common/: Cargo.toml
halo2_common/src/: arithmetic.rs  circuit.rs  helpers.rs  lib.rs  plonk.rs  poly.rs
halo2_common/src/circuit/: floor_planner.rs  layouter.rs  table_layouter.rs  value.rs
halo2_common/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_common/src/plonk/: circuit.rs  error.rs  keygen.rs  lookup.rs  permutation.rs  shuffle.rs
halo2_common/src/poly/: commitment.rs  domain.rs  multiopen_test.rs
halo2_common/src/poly/ipa/: strategy.rs
halo2_common/src/poly/kzg/: commitment.rs  msm.rs
halo2_curves/: Cargo.toml  README.md
halo2_curves/src/: arithmetic.rs  lib.rs  pairing.rs
halo2_curves/src/derive/: curve.rs  field.rs  mod.rs
halo2_curves/src/pasta/: mod.rs
halo2_curves/src/secp256k1/: curve.rs  fp.rs  fq.rs  hashtocurve.rs  mod.rs
halo2_curves/src/tests/: curve.rs  mod.rs
halo2_debug/: Cargo.toml
halo2_debug/src/: display.rs  lib.rs
halo2_frontend/: Cargo.toml
halo2_frontend/src/: circuit.rs  dev.rs  lib.rs  plonk.rs
halo2_frontend/src/circuit/: floor_planner.rs  layouter.rs  table_layouter.rs  value.rs
halo2_frontend/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_frontend/src/dev/: cost.rs  cost_model.rs  failure.rs  gates.rs  graph.rs  metadata.rs  tfp.rs  util.rs
halo2_frontend/src/dev/failure/: emitter.rs
halo2_frontend/src/dev/graph/: layout.rs
halo2_frontend/src/plonk/: assigned.rs  circuit.rs  error.rs  keygen.rs  lookup.rs  permutation.rs  shuffle.rs
halo2_frontend/src/plonk/circuit/: compress_selectors.rs  constraint_system.rs  expression.rs
halo2_gadgets/: CHANGELOG.md  Cargo.toml  README.md
halo2_gadgets/benches/: poseidon.rs  primitives.rs  sha256.rs
halo2_gadgets/src/: ecc.rs  ecc_opt.rs  endoscale.rs  fibonacci.rs  lib.rs  poseidon.rs  primitives.rs  sha256.rs  sinsemilla.rs  sinsemilla_opt.rs  tests.rs  utilities.rs  utilities_opt.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/ecc/chip/: add.rs  add_incomplete.rs  constants.rs  double.rs  double_and_add.rs  mul.rs  mul_fixed.rs  witness_point.rs
halo2_gadgets/src/ecc_opt/: chip.rs
halo2_gadgets/src/endoscale/: chip.rs  util.rs
halo2_gadgets/src/poseidon/: pow5.rs  primitives.rs
halo2_gadgets/src/primitives/: poseidon.rs  sinsemilla.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs  message.rs  primitives.rs
halo2_gadgets/src/sinsemilla_opt/: chip.rs  merkle.rs  primitives.rs
halo2_gadgets/src/test_circuits/: test_utils.rs
halo2_gadgets/src/tests/: circuit.rs  test_utils.rs
halo2_gadgets/src/utilities/: bitstring.rs  boolean.rs  cond_swap.rs  decompose_running_sum.rs  double_and_add.rs  lookup_range_check.rs  mux.rs  test_circuit.rs
halo2_gadgets/src/utilities_opt/: cond_swap.rs  lookup_range_check.rs
halo2_middleware/: Cargo.toml
halo2_middleware/src/: circuit.rs  expression.rs  lib.rs  lookup.rs  metadata.rs  permutation.rs  poly.rs  shuffle.rs  zal.rs
halo2_poseidon/: Cargo.toml
halo2_poseidon/src/: grain.rs  lib.rs  p128pow5t3.rs  test_vectors.rs
halo2_proofs/: CHANGELOG.md  Cargo.toml  README.md
halo2_proofs/benches/: arithmetic.rs  commit_zk.rs  dev_lookup.rs  fft.rs  multiexp.rs  plonk.rs  poly.rs
halo2_proofs/examples/: circuit-layout.rs  cost-model.rs  dynamic-lookup.rs  dynamic_lookup.rs  e2e-example.rs  lookup.rs  proof-size.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple-example-2.rs  simple-example-3.rs  simple-example.rs  simple-lookup.rs  two-chip.rs  vector-mul.rs  vector-ops-unblinded.rs
halo2_proofs/examples/wrong-rotation/: gates.rs  main.rs  word.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  lib.rs  multicore.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/arithmetic/: fft.rs  multiexp.rs
halo2_proofs/src/circuit/: layouter.rs  table_layouter.rs  value.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  metadata.rs  tfp.rs  util.rs
halo2_proofs/src/dev/cost/: time.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  keygen.rs  lookup.rs  multiset_equality.rs  permutation.rs  prover.rs  shuffle.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs  msm.rs  multiopen.rs  multiopen_test.rs  query.rs  strategy.rs
halo2_proofs/tests/: compress_selectors.rs  frontend_backend_split.rs  lookup_any.rs  plonk_api.rs  serialization.rs  shuffle.rs  shuffle_api.rs  vector-ops-unblinded.rs
p3_frontend/: Cargo.toml
p3_frontend/src/: air.rs  fwrap.rs  lib.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs
p3_frontend/tests/: fib_air.rs  keccak_air.rs
p3_frontend/tests/common/: mod.rs
pasta_curves/: CHANGELOG.md  Cargo.toml  README.md
pasta_curves/src/: arithmetic.rs  curves.rs  fields.rs  hashtocurve.rs  lib.rs
pasta_curves/src/arithmetic/: curves.rs  fields.rs
pasta_curves/src/fields/: fp.rs  fq.rs
secpq_curves/: Cargo.toml  README.md  secp.sage  secp.ts
secpq_curves/src/: arithmetic.rs  curves.rs  fields.rs  hashtocurve.rs  lib.rs  macros.rs  secp256k1.rs  secq256k1.rs
secpq_curves/src/fields/: fp.rs  fq.rs
secpq_curves/src/tests/: curve.rs  field.rs
(+1698 files in other folders)
