[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_poseidon",
    "halo2_proofs",
]

[workspace.dependencies]
arrayvec = "0.7.0"
assert_matches = "1.5"
backtrace = "0.3"
bitvec = { version = "1", default-features = false }
blake2b_simd = "1"
criterion = "0.3"
dashmap = ">=5, <5.5.0"
ff = { version = "0.13", default-features = false }
group = "0.13"
gumdrop = "0.8"
halo2_legacy_pdqsort = "0.1.0"
halo2_poseidon = { version = "0.1", path = "halo2_poseidon", default-features = false }
halo2_proofs = { version = "0.3", path = "halo2_proofs", default-features = false }
image = ">=0.24, <0.24.5"
lazy_static = "1"
maybe-rayon = { version = "0.1.0", default-features = false }
pasta_curves = "0.5"
plotters = { version = "0.3.0", default-features = false }
proptest = "1.0.0"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
sinsemilla = "0.1"
subtle = "2.3"
tabbycat = "0.1"
tempfile = ">=3, <3.7.0"
tracing = "0.1"
uint = "0.9.2"
