[package]
name = "halo2_gadgets"
version = "0.1.0-beta.3"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.56.1"
description = "[BETA] Reusable gadgets and chip implementations for Halo 2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zcash", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
arrayvec = "0.7.0"
bitvec = "1"
ff = "0.12"
group = "0.12"
halo2_proofs = { version = "0.1", path = "../halo2_proofs" }
lazy_static = "1"
pasta_curves = "0.4"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
subtle = "2.3"
uint = "0.9.2" # MSRV 1.56.1

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.8", features = ["criterion", "flamegraph"] } # MSRV 1.56

[lib]
bench = false

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
test-dependencies = ["proptest"]
unstable = []

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "sha256"
harness = false
required-features = ["unstable"]
