[package]
name = "halo2_gadgets"
version = "0.3.1"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Emma Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.60"
description = "Reusable gadgets and chip implementations for Halo 2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zcash", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
arrayvec = { workspace = true }
bitvec = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
halo2_poseidon = { workspace = true }
halo2_proofs = { workspace = true }
lazy_static = { workspace = true }
pasta_curves = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
sinsemilla = { workspace = true }
subtle = { workspace = true }
uint = { workspace = true } # MSRV 1.56.1

# Developer tooling dependencies
plotters = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
halo2_poseidon = { workspace = true, features = ["test-dependencies"] }
proptest = { workspace = true }
sinsemilla = { workspace = true, features = ["test-dependencies"] }

[target.'cfg(unix)'.dev-dependencies]
inferno = ">=0.11, <0.11.5" # MSRV 1.59
pprof = { version = "0.8", features = ["criterion", "flamegraph"] } # MSRV 1.56

[lib]
bench = false

[features]
test-dev-graph = [
    "halo2_proofs/dev-graph",
    "plotters",
    "plotters/bitmap_backend",
    "plotters/bitmap_encoder",
    "plotters/ttf",
]
test-dependencies = [
    "proptest",
    "sinsemilla/test-dependencies",
]

# In-development features
# See https://zcash.github.io/halo2/dev/features.html
beta = [
    "halo2_proofs/beta",
]
nightly = [
    "beta",
    "halo2_proofs/nightly",
    "unstable-sha256-gadget",
]
unstable-sha256-gadget = []
# Add flags for in-development features above this line.

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "sha256"
harness = false
required-features = ["unstable-sha256-gadget"]
